# aml-transaction-monitoring-engine

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  RUNBOOK.md  alembic.ini  docker-compose.yml  pyproject.toml  reproduce_057696d5-6833-4ede-a87a-c2cf5b25adda.json  reproduce_example.json  requirements.txt
.streamlit/: config.toml
alembic/: env.py
config/: default.yaml  dev.yaml
data/: aml.db
docs/: ARCHITECTURE.md  BENCHMARK_FINDINGS_AND_ACTIONS.md  BENCHMARK_TOP_PROJECTS.md  CI_RUN_LOG.md  DASHBOARD.md  DOCS_CONSISTENCY_AUDIT.md  GITHUB_POSITIONING.md  IMPLEMENTATION_CHANGELOG_PLAN.md  IMPLEMENTATION_DELIVERABLE.md  MAKE_CI_OUTPUT_AFTER_RULES_VERSION.md  MAKE_CI_PROOF.md  POSTGRES.md  PRODUCTION_READINESS_GAP_ANALYSIS.md  RULE.md  THREAD_B_AUDIT_REPORT.md  VETERAN_CRITIQUE_AND_2026_ROADMAP.md  rule_register.csv  scenario_library.md
reports/: demo_repro_98cd1fc5-7762-4a3b-8aaa-764385a8d893.json  demo_repro_b23f24a8-3136-47aa-bfbd-0d84b35aac75.json  demo_repro_c2dcd843-eaee-4d06-854e-5b71b785ef2a.json  sar_20260219_152558.csv  sar_20260219_152558.json  sar_20260220_191839.csv  sar_20260220_191839.json  sar_20260220_192953.csv  sar_20260220_192953.json  sar_20260220_193113.csv  sar_20260220_193113.json  sar_20260220_193221.csv  sar_20260220_193221.json  sar_20260220_193324.csv  sar_20260220_193324.json  sar_20260220_193404.csv  sar_20260220_193404.json  sar_20260220_193827.csv  sar_20260220_193827.json  sar_20260220_194429.csv  sar_20260220_194429.json  sar_20260220_195454.csv  sar_20260220_195454.json  sar_20260220_201613.csv  sar_20260220_201613.json  sar_20260220_223443.csv  (+5 more)
scripts/: ci.sh  (+8 more)
(+118 files in other folders)
